--- a/members.html
+++ b/members.html
@@ -8,6 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="js/script.js"></script>
         <link href="css/common.css" rel="stylesheet">
+        <link href="css/members.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">    
@@ -30,7 +31,37 @@
                 </div>
             </div>
         </header>
-        <main class="main"></main>
+        <main class="main">
+            <div class="members">
+                <h2>Members</h2>
+            </div>
+            <ul class="member-list">
+                <li>
+                    <img src="images/members/member_A.png" alt="メンバーA">
+                    <dd>
+                        <dt>メンバーA</dt>
+                        <dd>研究テーマ: コンピュータグラフィックス</dd>
+                    </dd>
+                    <p class="speciality">専門分野: CG/HI/画像処理</p>    
+                </li>
+                <li>
+                    <img src="images/members/member_B.png" alt="メンバーB">
+                    <dd>
+                        <dt>メンバーB</dt>
+                        <dd>研究テーマ: 自然言語処理</dd>
+                    </dd>
+                    <p class="speciality">専門分野: 自然言語処理</p>    
+                </li>
+                <li>
+                    <img src="images/members/member_C.png" alt="メンバーC">
+                    <dd>
+                        <dt>メンバーC</dt>
+                        <dd>研究テーマ: バーチャルリアリティ</dd>
+                    </dd>
+                    <p class="speciality">専門分野: VR/五感インタフェース</p>    
+                </li>
+            </ul>
+        </main>
         <footer class="footer">
             <nav class="site-menu">
                 <ul>
